// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";
import "product/ci/scm/proto/scm_service.proto";

package io.harness.eventsframework.webhookpayloads.webhookdata;

option java_multiple_files = true;
option go_package = "953_events_api";

message TriggerExecutionDTO {
  string accountId = 1;
  string orgIdentifier = 2;
  string projectIdentifier = 3;
  string targetIdentifier = 4;
  string triggerIdentifier = 5;
  bool authenticated = 6;
  WebhookDTO webhookDto = 7;
}

message WebhookDTO {
  string jsonPayload = 1;
  WebhookTriggerType webhookTriggerType = 2;
  WebhookEventType webhookEventType = 3;
  product.ci.scm.proto.ParseWebhookResponse parsedResponse = 4;
  repeated EventHeader headers = 5;
  GitDetails gitDetails = 6;
  string accountId = 7;
  string eventId = 8;
  int64 time = 9;
}

message EventHeader {
  string key = 1;
  repeated string values = 2;
}

enum WebhookEventType {
  PUSH = 0;
  PR = 1;
  ISSUE_COMMENT = 2;
  CREATE_BRANCH = 3;
  DELETE_BRANCH = 4;
  RELEASE = 5;
}

enum WebhookTriggerType {
  GIT = 0;
  CUSTOM = 1;
}

enum SourceRepoType {
  GITHUB = 0;
  GITLAB = 1;
  BITBUCKET = 2;
  AWS_CODECOMMIT = 3;
  AZURE = 4;
  HARNESS = 5;
}

message GitDetails {
  SourceRepoType sourceRepoType = 1;
  WebhookEventType event = 2;
}
